--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
       <p><a href="#">DownLoad Excursion
         (Coming Soon!)</a></p>
     </header>
-
-    <video autoplay controls>
+    <main>
+    <video autoplay muted loop>
       <source src="C:\Users\dspoc\Downloads\excursion.mp4" type="video/mp4">
-      Your browser does not support the video tag.
     </video>
 
     <h1 id="pers">Your personal travel guide</h1>
@@ -32,9 +31,10 @@
 
     <h1 id="rel">Coming Soon for iPhone and Android</h1>
     <p><a href="#">Download Excursion (Coming soon!)</a></p>
-
+    </main>
+    <footer>
     <h1 id="xcur">&amp; Excursion</h1>
-
+    </footer>
   </body>
 </html>
 
